# colcon-uv

./: LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
colcon_uv/: README.md
colcon_uv/colcon_uv/: __init__.py
colcon_uv/colcon_uv/dependencies/: install.py
colcon_uv/colcon_uv/task/uv/: build.py  test.py
colcon_uv/tests/: test_dependencies.py
tests/: pytest.ini  test_dependencies.py  test_package_identification.py  test_task_build.py
tests/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  test_isolation.sh  test_pingpong.sh
tests/examples/uv_ament_cmake_example/: CMakeLists.txt  package.xml  pyproject.toml
tests/examples/uv_ament_cmake_example/config/: example_config.yaml  uv_ament_cmake_example_params.yaml
tests/examples/uv_ament_cmake_example/launch/: uv_ament_cmake_example_launch.py
tests/examples/uv_ament_cmake_example/resource/: uv_ament_cmake_example
tests/examples/uv_ament_cmake_example/uv_ament_cmake_example/: pong_node.py
tests/examples/uv_ament_python_example/: package.xml  pyproject.toml
tests/examples/uv_ament_python_example/config/: uv_ament_python_example_params.yaml
tests/examples/uv_ament_python_example/launch/: ping_pong_demo.launch.py  uv_ament_python_example_launch.py
tests/examples/uv_ament_python_example/uv_ament_python_example/: ping_node.py
