[project]
name = "uv_ament_python_example"
version = "0.1.0"
description = "Pure Python/UV example package for colcon-uv (uses numpy 1.26.0 for isolation demo)"
authors = [
    {name = "Open Source Robotics Foundation", email = "info@osrfoundation.org"}
]
dependencies = [
    "numpy==1.26.0",  # Intentionally older version for isolation demo (Python 3.12 compatible)
    "requests>=2.25.0",
]

[project.scripts]
ping_node = "uv_ament_python_example.ping_node:main"

[tool.colcon-uv-ros]
name = "uv_ament_python_example"

[tool.colcon-uv-ros.dependencies]
depend = ["rclpy"]
exec_depend = ["numpy", "requests"]
test_depend = ["pytest", "pytest-cov"]

[tool.colcon-uv-ros.data-files]
"share/ament_index/resource_index/packages" = ["resource/uv_ament_python_example"]
"share/uv_ament_python_example" = ["package.xml", "launch", "config"] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uv_ament_python_example"]